# strand

./: .gitignore  CHANGELOG.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
.changes/: add-log.md  commit-info.md  config.json  delimit-commits.md  disable-unimplemented-buttons.md  fetch-all.md  file-diff.md  filter-command-log.md  fix-merge-commit-files.md  fix-word-diff.md  git-command-log.md  limit-avatar-initials.md  limit-commits.md  limit-git-log.md  load-branches.md  open-from-folder.md  refetch-commits.md  show-changed-files.md  show-toasts.md  syntax-highlighting.md  toasts.md  upgrade-packages.md
.github/workflows/: checks-rs.yml  checks-ts.yml  checks.yml  release.yml  status.yml
.zed/: settings.json
src/: App.tsx  bindings.ts  commands.ts  main.css  main.tsx  store.ts  ui-state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-02075224dd4f38b3b14c36e2f6822505495a09b82e07deb9da498a051915dcb4.json  query-0d7a74fb16ab9617c36cbb8d5ff853f61054a394198d01ddae98197b751d2ead.json  query-1c03c598246a1874860bd2c32b4a95c242d3bd30f70d5eabb916a2b7514c79a5.json  query-273b08d1c44981207fd7444655208e52ac20c4a1cc456958d07e1ef36d14d198.json  query-3ac46f56aa4573c3219222ba4443d885b7851379d3462c55fa60fe22ee854202.json  query-63bfdf58034c487c653da94ba144286214d874b6bf7672048086d0c6716a4f1f.json  query-79cd763b9b7fb67fd71b48746eea97290fe12aa92961f149dc2dee8d462f8528.json  query-7d1043b0e63edd027c0b70a5157e378603d99bc5d2358954129aac058d4cfa80.json  query-8957fe364f7d49e989ba2e1177a392bb272f84be0953c729c3da901ee558dd4f.json  query-9cccfc355c6e98908276b5797e6d144030d8bda017a52a459d8d20551a460378.json  query-a1a6e5724119fb2d80387bf4ffa69b247d3e241ea1944772b3a52e52d4fd5590.json  query-ac6bb3498115b7c217785a8aa061e0cb0b83c55d09555b32bcb70cd25fa85403.json  query-cc6787a56a28688654d2c46c0b4a17e813ab3b74ef48dd52be5b655bd6819135.json  query-d5d04046f9beb9f267a49592c9c6163bbe8fc1c08d9b54e7c27b0a077acffd84.json  query-e3fbe401d1f6e7023705c34f07308cb88cd996c92112ef177faf29cc4160d493.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240605121746_init.sql  20240611112746_add_command_log.sql
src-tauri/src/: cli.rs  db.rs  main.rs  state.rs
src-tauri/src/cli/: local_branches.rs  mod.rs  remote_branches.rs
src-tauri/src/commands/: add_repository_from_path.rs  get_branches.rs  get_changed_files.rs  get_commit_files.rs  get_file_diff.rs  get_git_command_log.rs  get_graph.rs  get_open_repository.rs  get_repositories.rs  get_state.rs  get_state_data.rs  git_fetch.rs  local_branches.rs  mod.rs  remote_branches.rs  repository.rs  set_open_repository.rs  state.rs
src-tauri/src/helpers/: git_command.rs
src-tauri/src/structures/: branch.rs  commit.rs  diff_status.rs  file.rs  file_diff.rs  file_diff_meta.rs  file_status.rs  hash.rs  mod.rs  upstream_track.rs
src-tauri/src/structures/git/: branch.rs  hash.rs  mod.rs
src-tauri/src/utils/: highlight.rs
src/components/BranchListPanel/: index.tsx
src/components/Branches/: index.tsx
src/components/Button/: index.tsx
src/components/CommitDetails/: File.tsx  Stats.tsx  index.tsx
src/components/FileDiff/: Diff.tsx  index.tsx
src/components/FileName/: index.tsx
src/components/Graph/: CommitRow.tsx  index.tsx
src/components/IconButton/: index.tsx
src/components/RepositorySelector/: index.tsx
src/components/StatusBar/: GitCommandLog.tsx  History.tsx  Notifications.tsx  index.tsx
src/components/Toaster/: Toast.tsx  Toaster.tsx  index.ts
src/components/Toolbar/: index.tsx
src/components/Tooltip/: index.tsx
src/components/UI/: Avatar.tsx  DropdownMenu.tsx  IconButton.tsx  Popover.tsx  Select.tsx  Toast.tsx  Tooltip.tsx
src/data/: useOpenRepository.ts
src/res/: LogIcon.tsx
src/utils/: cn.ts  formatDate.ts  useCommandMutation.ts  useCommandQuery.ts  useIsDocumentHidden.ts
