[package]
name = "strand"
version = "0.5.0"
description = "A strand-like git GUI"
authors = ["Benji Grant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.12", features = ["chrono"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono" ] }
tauri-specta = { version = "2.0.0-rc.11", features = ["typescript"] }
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.9"
tokio = { version = "1.38.0", features = ["fs", "process"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
sha2 = "0.10.8"
similar = "2.5.0"
syntect = "5.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
