[package]
name = "strand"
version = "0.6.0"
description = "A strand-like git GUI"
authors = ["Benji Grant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.12", features = ["chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri-specta = { version = "2.0.0-rc.11", features = ["typescript"] }
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.9"
tokio = { version = "1.38.0", features = ["fs", "process"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
sha2 = "0.10.8"
similar = "2.5.0"
# For now, we just include some commonly used languages
tree-sitter-highlight = "0.22.6"
tree-sitter-c = "0.21.4"
tree-sitter-cpp = "0.22.2"
tree-sitter-c-sharp = "0.21.2"
tree-sitter-css = "0.21.0"
tree-sitter-html = "0.20.3"
tree-sitter-java = "0.21.0"
tree-sitter-javascript = "0.21.4"
tree-sitter-json = "0.21.0"
tree-sitter-lua = "0.1.0"
tree-sitter-md = "0.2.3"
tree-sitter-php = "0.22.7"
tree-sitter-python = "0.21.0"
tree-sitter-ruby = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-swift = "0.5.0"
tree-sitter-toml-ng = "0.6.0"
tree-sitter-typescript = "0.21.2"
tree-sitter-yaml = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
