[package]
name = "strand"
version = "0.7.0"
description = "A strand-like git GUI"
authors = ["Benji Grant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = { version = "2.0.0-rc.21", features = ["chrono"] }
specta-typescript = "0.0.9"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.1"
tokio = { version = "1.44.2", features = ["fs", "process"] }
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = "1.0.61"
sha2 = "0.10.8"
similar = "2.7.0"
nom = "8.0.0"
# For now, we just include some commonly used languages
tree-sitter-highlight = "0.25.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-css = "0.23.2"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.2.0"
tree-sitter-md = "0.3.2"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-swift = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
